securing-worloads/assets/step3-cluster-level.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
