securing-worloads/assets/step3-workload-level.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls-httpbin
  namespace: workload-level
spec:
  selector:
    matchLabels:
      app: httpbin
  mtls:
    mode: STRICT
