securing-worloads/assets/step2-secure-mtls-strict.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: mtls-strict
spec:
  hosts:
    - httpbin
  http:
  - match:
      fromNamespaces: # FIXME: HERE???
      - default
        
    route:
    - destination:
        host: httpbin
        subset: v1
      weight: 100
